IDB: The test after storage/indexeddb/mozilla/object-identity.html fails in cleanup code <rdar://problem/16040663> and https://bugs.webkit.org/show_bug.cgi?id=128621

Reviewed by Alexey Proskuryakov.

Source/WebCore:

Covered by storage/indexeddb/mozilla/object-identity.html.

* Modules/indexeddb/IDBTransactionBackend.cpp:
(WebCore::IDBTransactionBackend::abort): Clear the m_database pointer before calling the onAbort callback.
(WebCore::IDBTransactionBackend::commit): Don't run the abort code if there's no m_database pointer.

LayoutTests:

* platform/mac-wk2/TestExpectations: Enabled all of the storage/indexeddb/mozilla tests except 1.

Canonical link: https://commits.webkit.org/146658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163912 268f45cc-cd09-0410-ab3c-d52691b4dbfc